tests/NormalTests/paczka2/big_fuzzy/27431379.err
Error in line 5: 6iaaa A66K 75,4
Error in line 1: zc6pldR A244 28,0
Error in line 13: 6iaaa A661 343,1
Error in line 11: A244 A661 24,5
Error in line 16: 6iaaa A392 7,7
Error in line 27: K3QkjAYkegn A244 73,1
Error in line 32: pv1 A392 30,4
Error in line 39: IGfgA7Pi8Kj A244 87,0
Error in line 40: IGfgA7Pi8Kj S204 66,5
Error in line 44: A244 A392 35,8
Error in line 37: pv1 A244 82,9
Error in line 49: pv1 A392 76,3
Error in line 52: K3QkjAYkegn Sp04 134,5
Error in line 51: pv1 A244 68,6
Error in line 56: IGfgA7Pi8Kj A244 31,1
Error in line 58: IGfgA7Pi8Kj A661 96,9
Error in line 60: zc6pldR A661 23,9
Error in line 63: pv1 A392 93,4
Error in line 31: K3QkjAYkegn S204 65,3
Error in line 71: IGfgA7Pi8Kj S204 100,4
Error in line 76: zc6pldR A392 52,5
Error in line 88: IGfgA7Pi8Kj A661 81,1
Error in line 94: 6iaaa A661 3,6
Error in line 120: K3QkjAYkegn A244 53,0
Error in line 113: IGfgA7Pi8Kj A244 15,8
Error in line 124: pv1 S204 16,1
Error in line 127: IGfgA7Pi8Kj A392 27,8
Error in line 147: zc6pldR A661 93,7
Error in line 153: zc6pldR S204 7,0
Error in line 163: zc6pldR A244 0,0
Error in line 171: 6iaaa A661 27,0
Error in line 160: K3QkjAYkegn A661 93,3
Error in line 169: zc6pldR A661 58,0
Error in line 178: K3QkjAYkegn A392 94,5
Error in line 188: K3QkjAYkegn S204 151,7
Error in line 205: IGfgA7Pi8Kj A661 2,9
Error in line 193: pv1 A244 28,4
Error in line 192: K3QkjAYkegn A244 10,8
Error in line 206: IGfgA7Pi8Kj S204 72,0
Error in line 219: A244 A244 74,3
